--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-cookie": "^1.1.4",
     "vue-jsonp": "^0.1.8",
     "vue-router": "^3.1.5",
+    "vue-tabs-component": "^1.5.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
