--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-cookie": "^1.1.4",
     "vue-jsonp": "^0.1.8",
+    "vue-pinch-zoom": "^1.0.1",
     "vue-router": "^3.1.5",
     "vue-tabs-component": "^1.5.0",
+    "vue-zoomer": "^0.3.6",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
