--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios-jsonp": "^1.0.4",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-axios-cors": "^1.0.1",
     "vue-cookie": "^1.1.4",
     "vue-jsonp": "^0.1.8",
     "vue-pinch-zoom": "^1.0.1",
